--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
             <li style="font-size: 14px;"><a href="tel:+918240732278"><img style="width: 20px; margin: 0 3px 0 5px; vertical-align: middle;"
                   src="./images/icons/phone.svg" />+918240732278</a> </li>
             <li style="font-size: 14px;"><a href=""
-                onclick="window.open('https://wa.me/+918240592073')"><img
+                onclick="window.open('https://wa.me/918240592073')"><img
                   style="width: 15px; margin: 0 3px 0 5px; vertical-align: middle;" src="./images/icons/whatsapp.svg" />+918240266320</a> </li>
           </ul>
         </div>
@@ -980,7 +980,7 @@
                   style="width: 20px; margin: 0 3px 0 5px; vertical-align: middle;"
                   src="./images/icons/phone.svg" />+918240732278</a> </li>
             <li style="font-size: 14px;"><a href=""
-                onclick="window.open('https://wa.me/+918240592073')"><img
+                onclick="window.open('https://wa.me/918240592073')"><img
                   style="width: 15px; margin: 0 3px 0 5px; vertical-align: middle;"
                   src="./images/icons/whatsapp.svg" />+918240266320</a> </li>
           </ul>
@@ -1131,7 +1131,7 @@
                           style="width: 20px; margin: 0 3px 0 5px; vertical-align: middle;"
                           src="./images/icons/phone.svg" />+918240732278</a> </li>
                     <li><a href=""
-                        onclick="window.open('https://wa.me/+918240592073')"><img
+                        onclick="window.open('https://wa.me/918240592073')"><img
                           style="width: 15px; margin: 0 3px 0 5px; vertical-align: middle;"
                           src="./images/icons/whatsapp.svg" />+918240266320</a> </li>
                   </ul>
