--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@
       .menu-item-23 .pxl-menu-toggle {
         display: none;
       }
+      .elementor-2593 .elementor-element.elementor-element-88fb222 .pxl-case-carousel .pxl-item--inner .item--holder {
+        background: rgba(0,0,0,0.5) !important;
+      }
     }
   </style>
   <link rel='stylesheet' id='redux-extendify-styles-css'
