--- a/products/google-ad.html
+++ b/products/google-ad.html
@@ -906,7 +906,7 @@
                         <a href="" onclick="event.preventDefault()"><span>Services</span></a>
                         <ul class="sub-menu">
                           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1348"><a
-                              href="./ppc.html"><span>Paid Search Marketing</span></a></li>
+                              href="./ppc"><span>Paid Search Marketing</span></a></li>
                             <li 
                               class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1349">
                               <a href="./smm"><span>Social Media Marketing</span></a></li>
